--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     <main class="text-black grid grid-cols-3 gap-3 ">
       <!-- card 1 -->
       <article class="text-center max-w-2xl p-6 bg-white">
-        <h2 class="text-2xl font-bold">Name</h2>
+        <h2 class="text-2xl font-bold">Emmanuel</h2>
         <h3 class="text-lg font-semibold">Description</h3>
         <!-- Remove the random text and write your text in-between  -->
-        <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro harum animi ipsa cupiditate.
-          Nihil, asperiores exercitationem! Laborum nulla minus fugit?</p>
+        <p class="mt-4">Collaborating with Chisom</p>
       </article>
 
       <!-- card 2 -->
